--- a/budget_project/templates/edit_transaction.html
+++ b/budget_project/templates/edit_transaction.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
-
+{% load l10n %}
 
 {% block title %}Редактировать операцию{% endblock %}
-
 
 {% block content %}
 <div class='container'>
@@ -12,7 +11,42 @@
 
   <form method='post' action='{% url 'update_transaction' transaction.id %}'>
     {% csrf_token %}
-    {{ form|crispy }}
+
+    {{ form.non_field_errors }}
+
+    <div class="mb-3">
+      {{ form.date|as_crispy_field }}
+    </div>
+
+    <div class="mb-3">
+      {{ form.transaction_type|as_crispy_field }}
+    </div>
+
+    <div class="mb-3">
+      <label for="{{ form.amount.id_for_label }}" class="form-label">
+        {{ form.amount.label }}
+      </label>
+      <input type="text"
+             class="form-control{% if form.amount.errors %} is-invalid{% endif %}"
+             id="{{ form.amount.id_for_label }}"
+             name="{{ form.amount.html_name }}"
+             value="{{ form.amount.value|localize }}"
+             placeholder="{{ form.amount.field.widget.attrs.placeholder }}"
+             {% if form.amount.field.required %}required{% endif %}>
+      {% if form.amount.errors %}
+        <div class="invalid-feedback">
+          {% for error in form.amount.errors %}{{ error }}{% endfor %}
+        </div>
+      {% endif %}
+    </div>
+
+    <div class="mb-3">
+      {{ form.category|as_crispy_field }}
+    </div>
+
+    <div class="mb-3">
+      {{ form.description|as_crispy_field }}
+    </div>
 
     <div class='mt-3'>
       <button type='submit' class='btn btn-primary'>Сохранить</button>
