--- a/budget_project/templates/dashboard.html
+++ b/budget_project/templates/dashboard.html
@@ -158,7 +158,7 @@
             <button type="submit" class="btn btn-primary w-100">Найти</button>
         </div>
         <div class="col-md-2">
-            <a href="{% url 'dashboard' %}" class="btn btn-secondary w-100">Очистить</a>
+            <a href="{% url 'dashboard' %}" class="btn btn-secondary w-100">Сбросить фильтры</a>
         </div>
         <div class="col-md-2">
             <a href="{% url 'export_csv' %}?start_date={{ start_date }}&end_date={{ end_date }}&q={{ search_query }}&category={{ selected_category }}"
